--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1078,6 +1078,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #012970;
 }
 
+/*--------------------------------------------------------------
+# Custom
+--------------------------------------------------------------*/
 .cate-image {
-  width: 100px;
+  width: 70px;
+  height: 70px;
 }
