--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -15,3 +15,13 @@ a{
     padding: 5px;
     font-weight: 400;
 }
+
+.order-detail label{
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.order-detail div{
+    font-size: 14px;
+    padding: 5px !important;
+}
